Ебучие группы починены